
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int * HWND ;


 int * FindWindow (int *,char*) ;
 int SW_SHOW ;
 int ShowWindow (int *,int ) ;
 int exit (int) ;
 int printf (char*,char*) ;

int main( void )
{
        HWND hWnd;
        char szWindowName[] = "Altiris Client Service";

        printf( "Finding window %s\n", szWindowName );

        hWnd = FindWindow( ((void*)0), szWindowName );

        if ( hWnd == ((void*)0) )
        {
                printf( "ERROR! Could not find window %s\n", szWindowName );

                exit( 1 );
        }

        ShowWindow( hWnd, SW_SHOW );

        return 0;
}
