; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_25554.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_25554.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.main.szWindowName = private unnamed_addr constant [23 x i8] c"Altiris Client Service\00", align 16
@.str = private unnamed_addr constant [19 x i8] c"Finding window %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [33 x i8] c"ERROR! Could not find window %s\0A\00", align 1
@SW_SHOW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = alloca [23 x i8], align 16
  store i32 0, i32* %1, align 4
  %4 = bitcast [23 x i8]* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %4, i8* align 16 getelementptr inbounds ([23 x i8], [23 x i8]* @__const.main.szWindowName, i32 0, i32 0), i64 23, i1 false)
  %5 = getelementptr inbounds [23 x i8], [23 x i8]* %3, i64 0, i64 0
  %6 = call i32 @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8* %5)
  %7 = getelementptr inbounds [23 x i8], [23 x i8]* %3, i64 0, i64 0
  %8 = call i32* @FindWindow(i32* null, i8* %7)
  store i32* %8, i32** %2, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %0
  %12 = getelementptr inbounds [23 x i8], [23 x i8]* %3, i64 0, i64 0
  %13 = call i32 @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0), i8* %12)
  %14 = call i32 @exit(i32 1) #4
  unreachable

15:                                               ; preds = %0
  %16 = load i32*, i32** %2, align 8
  %17 = load i32, i32* @SW_SHOW, align 4
  %18 = call i32 @ShowWindow(i32* %16, i32 %17)
  ret i32 0
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @printf(i8*, i8*) #2

declare dso_local i32* @FindWindow(i32*, i8*) #2

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #3

declare dso_local i32 @ShowWindow(i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
